# hotel-ai-agent

./: .gitignore  LICENSE  README.MD  pyproject.toml
api/: main.py  routes.py  schemas.py
capabilities/: __init__.py
capabilities/guest_experience/: __init__.py
capabilities/knowledge/: __init__.py
capabilities/marketing/: __init__.py
capabilities/ota_operations/: __init__.py
capabilities/revenue/: __init__.py
config/: settings.py
hotel_agents/: __init__.py
hotel_agents/guest_experience_agent/: __init__.py  agent.py  config.yaml  definition.py  prompt.md  schemas.py
hotel_agents/hotel_knowledge_agent/: __init__.py  agent.py
hotel_agents/marketing_content_agent/: __init__.py  agent.py  prompt.md
hotel_agents/ota_operations_agent/: __init__.py  agent.py
hotel_agents/revenue_intelligence_agent/: __init__.py  agent.py  config.yaml  prompt.md
launcher/: console.py  main.py  workflow.py
shared/: definition.py
shared/context/: __init__.py  exceptions.py  hotel_context.py  loader.py
shared/conversation/: __init__.py  manager.py  session.py  store.py
shared/knowledge/: __init__.py  client.py
shared/llm/: factory.py
shared/observability/: langfuse.py
shared/prompts/: __init__.py  loader.py
shared/registry/: agent_registry.py  workflow_registry.py
shared/runtime/: adapter.py  openai_adapter.py  runner.py  runtime.py  workflow_runtime.py
shared/tools/: __init__.py
shared/workflow/: checkpoint.py
tests/: conftest.py
tests/boundary/: test_reply_boundary.py  test_review_boundary.py
tests/evals/: evaluator.py  evaluator_reply.py  runner_comparison.py  runner_workflow.py  test_context_injection.py  (+3 more)
(+66 files in other folders)
