[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hotel-ai-agents"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "openai>=2.45.0",
    "openai-agents>=0.18.2",
    "python-dotenv>=1.2.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[tool.setuptools.packages.find]
include = [
    "hotel_agents*",
    "shared*",
    "api*",
    "launcher*",
]