[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hotel-ai-agents"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "openai>=2.45.0",
    "openai-agents>=0.18.2",
    "python-dotenv>=1.2.2",
    "PyYAML>=6.0",
    "pydantic>=2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "prompt-toolkit>=3.0.0",
    "langgraph>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[tool.setuptools.packages.find]
include = [
    "capabilities*",
    "shared*",
    "api*",
    "launcher*",
]

[tool.pytest.ini_options]
markers = [
    "needs_llm: 标记需要 LLM 的测试（需要 --run-llm 参数才会运行）",
]